[package]
name = "lobby"
version = "0.1.0"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
license = "MIT"
description = "Const-size queue-like data structure."
homepage = "https://github.com/Dophin2009/lobby"
repository = "https://github.com/Dophin2009/lobby.git"
edition = "2018"

[package.metadata]
msrv = "1.51.0"

[dependencies]
