[package]
name = "lobby-queue"
version = "0.2.0"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
license = "MIT"
description = "Const-size queue-like data structure."
homepage = "https://github.com/mirryi/lobby"
repository = "https://github.com/mirryi/lobby.git"
edition = "2018"

[package.metadata]
msrv = "1.51.0"

[dependencies]
